--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "port": "^0.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
